Layout problem solved.

--- a/style/style.css
+++ b/style/style.css
@@ -655,7 +655,7 @@ header > nav{
    .skills__img{
       display: block;
       flex-basis: 20%;
-      width: 40vw;
+      width: 45%;
    }
 
    .work-wrapper{
